--- a/metadata.yaml
+++ b/metadata.yaml
@@ -43,6 +43,7 @@ subjects:
 - !lcc 'QA'
 - !lcsh 'Hyperspace'
 - !lcsh 'Circle-squaring'
+- GITenberg
 tableOfContents: Notion and definition of number -- Monism in arithmetic -- On the
   nature of mathematical knowledge -- The magic square -- The fourth dimension --
   The squaring of the circle.
